--- a/Crudman/appsettings.json
+++ b/Crudman/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "URLModelContext": "Data Source=URLModelContext.db"
+  }
 }
